--- a/WhatWearToday/Base.lproj/Main.storyboard
+++ b/WhatWearToday/Base.lproj/Main.storyboard
@@ -178,7 +178,7 @@
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GCa-WN-i7y">
-                                <rect key="frame" x="115.5" y="375.5" width="144" height="145"/>
+                                <rect key="frame" x="115" y="375.5" width="145" height="145"/>
                                 <color key="backgroundColor" red="0.75690642259999996" green="0.75317671429999999" blue="0.60036761400000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="GCa-WN-i7y" secondAttribute="height" multiplier="1:1" id="FCg-jT-n8D"/>
@@ -219,7 +219,11 @@
                     </view>
                     <navigationItem key="navigationItem" title="Calculation Result" id="LKe-C0-fB0">
                         <barButtonItem key="backBarButtonItem" title="Back" id="Wgr-BJ-z02"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Txi-Ix-XFr"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Txi-Ix-XFr">
+                            <connections>
+                                <action selector="outfitCalculationResult:" destination="4ix-QI-njs" id="Pqj-U4-nVS"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="footwear" destination="l2R-yR-19b" id="pNr-dX-Xyf"/>
@@ -233,6 +237,50 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QEi-qY-uuM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4730.3999999999996" y="554.57271364317842"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="OlI-g4-A8a">
+            <objects>
+                <tableViewController id="luW-UB-o7P" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="78" sectionHeaderHeight="28" sectionFooterHeight="28" id="nsJ-p0-kSU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="5lq-gv-Kjt" detailTextLabel="mYj-D4-vgn" rowHeight="85" style="IBUITableViewCellStyleSubtitle" id="3lu-gv-mRv">
+                                <rect key="frame" x="0.0" y="28" width="375" height="85"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3lu-gv-mRv" id="Vek-Mw-BQI">
+                                    <rect key="frame" x="0.0" y="0.0" width="342" height="84"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5lq-gv-Kjt">
+                                            <rect key="frame" x="15" y="24" width="34" height="21"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mYj-D4-vgn">
+                                            <rect key="frame" x="15" y="45" width="33" height="15"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="luW-UB-o7P" id="cVP-kG-Jsr"/>
+                            <outlet property="delegate" destination="luW-UB-o7P" id="2By-cj-SGR"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Sq-ae-aXP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6248.8000000000002" y="554.57271364317842"/>
         </scene>
         <!--Add a outfit-->
         <scene sceneID="9d3-KC-ZYT">
@@ -253,7 +301,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title of the outfit" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kaa-tb-y6h">
-                                                    <rect key="frame" x="8" y="7" width="351" height="30"/>
+                                                    <rect key="frame" x="8" y="7" width="359" height="30"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
@@ -348,7 +396,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="4tK-UX-0n7">
-                                                    <rect key="frame" x="134" y="8" width="225" height="29"/>
+                                                    <rect key="frame" x="142" y="8" width="225" height="29"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="225" id="8E2-bD-4OR"/>
                                                     </constraints>
@@ -385,7 +433,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pj4-kI-uPK">
-                                                    <rect key="frame" x="15" y="36" width="338" height="70"/>
+                                                    <rect key="frame" x="15" y="36" width="346" height="70"/>
                                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -413,14 +461,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SMc-5Y-Am1">
-                                                    <rect key="frame" x="69.5" y="17" width="228" height="128"/>
+                                                    <rect key="frame" x="73.5" y="17" width="228" height="128"/>
                                                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="SMc-5Y-Am1" secondAttribute="height" multiplier="16:9" id="zCK-Zy-p3T"/>
                                                     </constraints>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m0i-8w-YGB">
-                                                    <rect key="frame" x="128.5" y="66" width="110" height="30"/>
+                                                    <rect key="frame" x="132.5" y="66" width="110" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="110" id="nh4-nY-BKp"/>
                                                     </constraints>
@@ -696,13 +744,13 @@
                                     <segue destination="ERH-HU-Rys" kind="embed" id="F4j-9d-Bmg"/>
                                 </connections>
                             </containerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jdp-lD-nKm">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jdp-lD-nKm">
                                 <rect key="frame" x="275" y="563" width="84" height="84"/>
                                 <color key="backgroundColor" red="0.94317704439163208" green="0.93872624635696411" blue="0.74201112985610962" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Jdp-lD-nKm" secondAttribute="height" multiplier="1:1" id="Qbq-3a-TXJ"/>
                                 </constraints>
-                                <state key="normal" title="Back" backgroundImage="ClearSkyDay.jpg">
+                                <state key="normal" title="Back" backgroundImage="BrokenCloudsDay.jpg">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
@@ -759,14 +807,14 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ClearSkyDay.jpg" width="3264" height="2448"/>
+        <image name="BrokenCloudsDay.jpg" width="1024" height="768"/>
         <image name="camera-default.png" width="64" height="64"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="SQY-nf-7rf"/>
+        <segue reference="lui-AW-Bdo"/>
         <segue reference="8c3-SO-WiV"/>
         <segue reference="Xpc-gm-Fww"/>
-        <segue reference="jVW-Do-8WL"/>
-        <segue reference="lui-AW-Bdo"/>
-        <segue reference="SQY-nf-7rf"/>
+        <segue reference="C5V-8Q-qqt"/>
     </inferredMetricsTieBreakers>
 </document>
